k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crud-app
  labels:
    app: crud-app
